# cmake_cpp_qt_desktop_project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt
src/gui/mainwindow/: mainwindow.ui
